--- a/bookworld/templates/admin/dashboard.html
+++ b/bookworld/templates/admin/dashboard.html
@@ -211,7 +211,7 @@ new Chart("myChartPie", {
                 {
                     render: 'label',
                     position: 'outside',
-                    arc: false
+                    arc: true
                 }, {
                     render: 'percentage'
                 }
