--- a/bookworld/templates/admin/usersview.html
+++ b/bookworld/templates/admin/usersview.html
@@ -145,9 +145,10 @@
           dangerMode: true,
         }).then((willDelete) => {
           if (willDelete) {
-            swal("User Blocked successfully", {
-              icon: "success",
-            })
+            // swal("User Blocked successfully", {
+            //   icon: "success",
+            //   timer: 2000,
+            // })
             
             console.log("block user ajax");
              $.ajax({
