--- a/bookworld/templates/landing.html
+++ b/bookworld/templates/landing.html
@@ -8,8 +8,10 @@
 
 
     <div class="container-fluid banner">
-        <img src="{% static 'Blog-Banner-Image-1000x300-Arapahoe-Libraries-3.png' %}" class="img-fluid img_banner" alt="..."></div>
-
+        <div class="row">
+        <img src="{% static 'Blog-Banner-Image-1000x300-Arapahoe-Libraries-3.png' %}" class="img-fluid img_banner" alt="...">
+    </div>
+        </div>
 
     {% endblock %}
     {% block cate %}
