--- a/bookworld/templates/index.html
+++ b/bookworld/templates/index.html
@@ -5,7 +5,10 @@
         
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>BookWorld</title>
+
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+        <script rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css">
+        <script src="https://kit.fontawesome.com/5c4b0bc7b3.js" crossorigin="anonymous"></script>
         {% load static %}
 
         {% block meta %}
@@ -111,7 +114,7 @@
             
                         </ul>
                         <form class="d-flex" action="{% url 'search' %}" method='GET'>
-                            <input type="search" name="search" class="form-control rounded-0" placeholder="Search by book name" aria-label="search" aria-describedby="button-addon2">
+                            <input type="search" name="search" class="form-control rounded-0"  placeholder="&#xf002;">
                                             <button class="btn btn-outline-sucsess bg-secondary text-warning rounded-0" type="submit" id="button-addon2">Search</button>
                                     
                     
